<resources>
    <string name="app_name">KotlinWanAndroid</string>
    <string name="main_fg_home_str">首页</string>
    <string name="main_fg_system_str">广场</string>
    <string name="main_fg_official_str">公众号</string>
    <string name="main_fg_qa_str">问答</string>
    <string name="main_fg_me_str">我的</string>
    <string name="custom_loading_str">努力加载中</string>
    <string name="share_article_url">【%1$s】分享[%2$s]:%3$s</string>
    <string name="search_hint_str">输入关键字搜索</string>
    <string name="cha_str">×</string>
    <string name="empty_str">清空</string>
    <string name="search_history_str">搜索历史</string>
    <string name="hot_search_str">热门搜索</string>
    <string name="article_top_str">置顶</string>
    <string name="article_new_str">新</string>
    <string name="login_ac_str">用户名</string>
    <string name="login_psd_str">密码</string>
    <string name="login_rpsd_str">再次输入密码</string>
    <string name="login_btn_str">登录</string>
    <string name="go_register_str">没有账号？去注册</string>
    <string name="login_top_tip_str">欢迎使用玩Android\n&#160;&#160;&#160;一起来做个App吧</string>
    <string name="me_please_login_str">请先登录</string>
    <string name="me_collect_str">我的收藏</string>
    <string name="launch_tip_tv_str">玩ANDROID来了</string>
    <string name="launch_bottom_str">https://github.com/zqf-dev</string>
</resources>