<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/main_fg_home_str" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/system"
        android:title="@string/main_fg_system_str" />

    <item
        android:id="@+id/navigation_official"
        android:icon="@drawable/weixin"
        android:title="@string/main_fg_official_str" />

    <item
        android:id="@+id/navigation_qa"
        android:icon="@drawable/msg"
        android:title="@string/main_fg_qa_str" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/my"
        android:title="@string/main_fg_me_str" />

</menu>
