<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_30">

        <TextView
            android:id="@+id/login_top_tip_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/dimen_5"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_ac_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/login_ac_str"
                android:inputType="text"
                android:paddingStart="@dimen/dimen_10"
                android:textSize="15sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/login_psd_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/login_psd_str"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dimen_10"
                android:textSize="15sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/login_rpsd_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/login_rpsd_str"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dimen_10"
                android:textSize="15sp"
                android:visibility="gone"
                tools:ignore="TextFields" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/login_btn_draw"
            android:text="@string/login_btn_str"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/go_register_str"
            android:textColor="@color/new_primary"
            android:textSize="15sp" />
    </LinearLayout>

</layout>